Fix issue on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 #app {
     background: linear-gradient(rgb(241, 241, 241) 0%, rgb(212, 212, 212) 100%);
-    color: #dcdcdc;
 }
 
 #header {
